# dwellers

./: .gitignore  Cargo.toml  Manual.md  README.md
.cargo/: config.toml
.github/workflows/: main.yml
assets/: tilemap.wgsl
assets/locale/: en.ron  ru.ron
assets/shaders/: background.wgsl  chunk_weather.wgsl  noise.wgsl
src/: actions.rs  camera.rs  chunks.rs  data.rs  digging.rs  dwellers.rs  dwellers_needs.rs  locale.rs  main.rs  mobs.rs  objects.rs  preview_sprites.rs  production.rs  random_text.rs  save_load.rs  state.rs  structures.rs  tasks.rs  terrain.rs  tilemap.rs  tilemap_data.rs  tiles.rs  tileset.rs  ui.rs  utils.rs  zones.rs
src/data/: macros.rs  mod.rs  structures.rs
src/save_load/: mod.rs  save_load_assets.rs  save_load_systems.rs  save_load_ui.rs
src/sprites/: animation.rs  mod.rs  preview_sprites.rs  sprite_loader.rs
src/tilemap/: chunks.rs  mod.rs  objects.rs  terrain.rs  tilemap_chunk.rs  tilemap_data.rs  tileset.rs  weather.rs
src/ui/: actions_ui.rs  cheats_ui.rs  limits_ui.rs  mod.rs  save_load_ui.rs  workstation_ui.rs
