[package]
name = "dwellers"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["bevy_remote"] }
bevy_ecs_tilemap = "0.15.0"
bitcode = "0.6.6"
dashmap = "6.1.0"
noise = "0.9.0"
pathfinding = "4.14.0"
rand = "0.9.0"

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
type_complexity = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
needless_pass_by_value = "allow"
match_wildcard_for_single_variants = "allow"
single_match = "allow"
used_underscore_binding = "allow"
unnecessary_wraps = "allow"


# Dev optimizations

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


# Release optimizations

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"      # Optimize with size in mind (also try "z", sometimes it is better).
strip = "debuginfo"
# also try wasm-opt -Os
